# rust-service

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
configs/: default.toml  pi4.toml  pizero.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  event.rs  feature.rs  lib.rs  manager.rs  router.rs  transport.rs  types.rs
crates/devtools/: Cargo.toml
crates/devtools/src/: main.rs
crates/features/: Cargo.toml
crates/features/src/: lib.rs
crates/features/src/hello_world/: adapter.rs  api.rs  domain.rs  mod.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/platform/src/wifi/: detector.rs  linux.rs  mock.rs  mod.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
crates/transport/src/ble/: bluez.rs  framing.rs  mod.rs
crates/transport/src/http/: client.rs  mod.rs  protocol.rs
crates/transport/src/mock/: mod.rs  router.rs
docs/: architecture.md  deployment.md  development.md  protocol.md  risks.md
scripts/: build_pi4.sh  build_pizero.sh  deploy.sh
systemd/: service-app.service
tests/: Cargo.toml  e2e_hello.rs
tests/src/: lib.rs
tests/tests/: e2e_hello.rs  http_rpc.rs
