[workspace]
members = [
    "crates/core",
    "crates/transport",
    "crates/features",
    "crates/platform",
    "crates/app",
    "crates/devtools",
    "tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Service Project Maintainers"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies can be added here as the project grows.
