[package]
name = "service-transport"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["transport_mock"]
transport_mock = []
transport_http = ["axum", "base64", "serde", "serde_json", "anyhow"]
transport_ble = []

[dependencies]
service-core = { path = "../core" }
tokio = { version = "1", features = ["sync", "macros", "rt-multi-thread", "net"] }
axum = { version = "0.7", optional = true }
base64 = { version = "0.21", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
